--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="js/medida.js" data-cover></script>
   <script src="js/temperatura.js" data-cover></script>
   <script src="js/main.js" data-cover></script>
-  <script type="text/javascript" src="http://xregexp.com/v/3.1.0/xregexp-all.js"></script>
+  <script src="js/xregexp.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="js/conversor_test.js"></script>
   <script>mocha.run();</script>
